kstandarditemlistwidget: Fix vertical misalignment for file names containing certain glyphs

In the Details view the name (text) column could appear vertically off-center for file names containing certain Unicode glyphs (for example "』").  The issue is caused by a mismatch between the generic font metrics ascent and the actual ascent of the rendered QTextLine for that glyph, which shifts the baseline and thus the visual vertical centering.

This change computes the QTextLine ascent for the (single) layouted line and adjusts the vertical position by the difference between the font metrics ascent and the line ascent.  The adjustment is applied only for the name (text) role so other columns are unaffected.

BUG: 512152